--- a/views/index.html
+++ b/views/index.html
@@ -4,51 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Upload Image</title>
+    <title>User Profile Form</title>
   </head>
   <body>
-    <h1>User Info</h1>
-    <h2>Upload Profile Image</h2>
+    <h1>Enter User Profile</h1>
     <form
-      action="http://localhost:3000/upload"
       method="POST"
+      action="http://localhost:3000/submit"
       enctype="multipart/form-data"
     >
-      <label for="alias">Alias:</label>
-      <input
-        type="text"
-        name="alias"
-        id="alias"
-        placeholder="Enter your alias here"
-        required
-      /><br />
-      <label for="image">Upload your image here:</label>
-      <input type="file" name="image" id="image" required />
-      <button type="submit">Upload</button>
-    </form>
-    <h2>User Data Form</h2>
-    <form method="POST" action="http://localhost:3000/submit">
-      <label for="firstname">Firstname:</label>
+      <label for="firstname">First Name:</label>
       <input
         type="text"
         name="firstname"
         id="firstname"
         placeholder="Enter your first name here"
         required
-      /><br />
-      <label for="lastname">Lastname:</label>
+      />
+      <br />
+      <label for="lastname">Last Name:</label>
       <input
         type="text"
         name="lastname"
         id="lastname"
         placeholder="Enter your last name here"
         required
-      /><br />
-      <p style="display: inline">Online?</p>
-      <input id="online" type="radio" name="online" value="online" checked />
-      <label for="online">True</label>
-      <input id="offline" type="radio" name="online" value="offline" />
-      <label for="offline">False</label>
+      />
+      <br />
+      <label for="alias">Alias:</label>
+      <input
+        type="text"
+        name="alias"
+        id="alias"
+        placeholder="Enter image alias here"
+        required
+      />
+      <br />
+      <label for="profile">Profile Image:</label>
+      <input type="file" name="profile" id="profile" required />
+      <br />
       <button type="submit">Submit</button>
     </form>
   </body>
